Fix gap

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,6 @@
       "Courier New", monospace;
     --spacing: 0.25rem;
     --container-xl: 36rem;
-    --text-base: 1rem;
-    --text-base--line-height: calc(1.5 / 1);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-4xl: 2.25rem;
@@ -185,9 +183,6 @@
   }
 }
 @layer utilities {
-  .mx-auto {
-    margin-inline: auto;
-  }
   .my-6 {
     margin-block: calc(var(--spacing) * 6);
   }
@@ -196,9 +191,6 @@
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
-  }
-  .block {
-    display: block;
   }
   .contents {
     display: contents;
@@ -209,23 +201,8 @@
   .table {
     display: table;
   }
-  .h-\[300px\] {
-    height: 300px;
-  }
-  .h-full {
-    height: 100%;
-  }
-  .min-h-\[300px\] {
-    min-height: 300px;
-  }
   .w-full {
     width: 100%;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
   }
   .list-decimal {
     list-style-type: decimal;
@@ -239,21 +216,14 @@
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
-  .gap-y-10 {
-    row-gap: calc(var(--spacing) * 10);
-  }
-  .overflow-hidden {
-    overflow: hidden;
+  .gap-y-8 {
+    row-gap: calc(var(--spacing) * 8);
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-b-\[1px\] {
     border-bottom-style: var(--tw-border-style);
@@ -262,29 +232,17 @@
   .border-b-stone-150 {
     border-bottom-color: var(--color-stone-150);
   }
-  .bg-brown-800 {
-    background-color: var(--color-brown-800);
-  }
   .bg-rose-50 {
     background-color: var(--color-rose-50);
   }
   .bg-stone-100 {
     background-color: var(--color-stone-100);
   }
-  .bg-stone-900 {
-    background-color: var(--color-stone-900);
-  }
   .bg-white {
     background-color: var(--color-white);
   }
-  .object-cover {
-    object-fit: cover;
-  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
-  }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
@@ -359,13 +317,6 @@
   .text-stone-900 {
     color: var(--color-stone-900);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .md\:mx-auto {
     @media (width >= 48rem) {
       margin-inline: auto;
@@ -376,19 +327,9 @@
       display: block;
     }
   }
-  .md\:flex {
-    @media (width >= 48rem) {
-      display: flex;
-    }
-  }
   .md\:h-full {
     @media (width >= 48rem) {
       height: 100%;
-    }
-  }
-  .md\:min-h-\[300px\] {
-    @media (width >= 48rem) {
-      min-height: 300px;
     }
   }
   .md\:w-\[616px\] {
@@ -401,16 +342,6 @@
       width: 100%;
     }
   }
-  .md\:w-xl {
-    @media (width >= 48rem) {
-      width: var(--container-xl);
-    }
-  }
-  .md\:gap-32 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 32);
-    }
-  }
   .md\:overflow-hidden {
     @media (width >= 48rem) {
       overflow: hidden;
@@ -421,19 +352,9 @@
       border-radius: var(--radius-xl);
     }
   }
-  .md\:object-contain {
-    @media (width >= 48rem) {
-      object-fit: contain;
-    }
-  }
   .md\:object-cover {
     @media (width >= 48rem) {
       object-fit: cover;
-    }
-  }
-  .md\:object-fill {
-    @media (width >= 48rem) {
-      object-fit: fill;
     }
   }
   .md\:p-10 {
@@ -451,19 +372,9 @@
       padding-inline: calc(var(--spacing) * 12);
     }
   }
-  .md\:py-20 {
-    @media (width >= 48rem) {
-      padding-block: calc(var(--spacing) * 20);
-    }
-  }
   .md\:py-32 {
     @media (width >= 48rem) {
       padding-block: calc(var(--spacing) * 32);
-    }
-  }
-  .md\:pb-0 {
-    @media (width >= 48rem) {
-      padding-bottom: calc(var(--spacing) * 0);
     }
   }
   .md\:text-\[40px\] {
@@ -476,19 +387,9 @@
       width: 736px;
     }
   }
-  .xl\:pr-7 {
-    @media (width >= 80rem) {
-      padding-right: calc(var(--spacing) * 7);
-    }
-  }
   .xl\:pr-8 {
     @media (width >= 80rem) {
       padding-right: calc(var(--spacing) * 8);
-    }
-  }
-  .xl\:pr-10 {
-    @media (width >= 80rem) {
-      padding-right: calc(var(--spacing) * 10);
     }
   }
 }
@@ -505,18 +406,12 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
     }
   }
 }
